--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,15 @@ body {
     justify-content: space-around;
 }
 
+.txt{
+    position: absolute;
+    top: 20px;
+    color: white;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 34px;
+    font-weight: 300;
+}
+
 .main-cards {
     width: 1200px;
     height: 550px;
@@ -37,7 +46,9 @@ body {
 .card {
     background: url(../img/water-lily.jpg) center/cover;
     border-radius: 30px;
-
+    -webkit-box-shadow: 0px 0px 6px 8px rgba(0, 0, 0, 0.35);
+    -moz-box-shadow: 0px 0px 6px 8px rgba(0, 0, 0, 0.35);
+    box-shadow: 0px 0px 6px 8px rgba(0, 0, 0, 0.35);
 }
 
 .second {
