--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body {
     justify-content: space-around;
 }
 
-.txt{
+.txt {
     position: absolute;
     top: 20px;
     color: white;
@@ -27,9 +27,9 @@ body {
     flex-direction: column;
     background: rgb(97, 181, 255);
     border-radius: 50px;
-    -webkit-box-shadow: -10px 11px 14px -2px rgba(58, 101, 157, 0.58);
-    -moz-box-shadow: -10px 11px 14px -2px rgba(58, 101, 157, 0.58);
-    box-shadow: -10px 11px 14px -2px rgba(58, 101, 157, 0.58);
+    -webkit-box-shadow: -10px 10px 14px -2px rgba(58, 101, 157, 0.58);
+    -moz-box-shadow: -10px 10px 14px -2px rgba(58, 101, 157, 0.58);
+    box-shadow: -10px 10px 14px -2px rgba(58, 101, 157, 0.58);
     padding: 50px;
     box-sizing: border-box;
 }
@@ -46,9 +46,9 @@ body {
 .card {
     background: url(../img/water-lily.jpg) center/cover;
     border-radius: 30px;
-    -webkit-box-shadow: 0px 0px 6px 8px rgba(0, 0, 0, 0.35);
-    -moz-box-shadow: 0px 0px 6px 8px rgba(0, 0, 0, 0.35);
-    box-shadow: 0px 0px 6px 8px rgba(0, 0, 0, 0.35);
+    -webkit-box-shadow: 0px 0px 6px 9px rgba(0, 0, 0, 0.35);
+    -moz-box-shadow: 0px 0px 6px 9px rgba(0, 0, 0, 0.35);
+    box-shadow: 0px 0px 6px 9px rgba(0, 0, 0, 0.35);
 }
 
 .second {
@@ -59,8 +59,18 @@ body {
     background: url(../img/111.webp) center/cover;
 }
 
-input {
-    display: none;
+.input-txt,
+.input-txt::placeholder {
+    border: none;
+    outline: none;
+    background: none;
+    width: 333px;
+    text-align: center;
+    color: white;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 34px;
+    font-weight: 600;
+    margin-top: 30px;
 }
 
 .switchlabel {
@@ -73,6 +83,7 @@ input {
     border-radius: 50px;
     box-sizing: border-box;
     padding: 2px;
+    cursor: pointer;
 }
 
 .circle {
