--- a/css/style.css
+++ b/css/style.css
@@ -21,8 +21,8 @@ body {
 }
 
 .main-cards {
-    width: 1200px;
-    height: 550px;
+    width: 85.8vw;
+    height: 76.4vh;
     display: flex;
     flex-direction: column;
     background: rgb(97, 181, 255);
@@ -36,7 +36,7 @@ body {
 
 .cards {
     float: left;
-    width: 1100px;
+    width: calc(85.8vw - 100px);
     height: 400px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -44,6 +44,8 @@ body {
 }
 
 .card {
+    display: flex;
+    justify-content: space-around;
     background: url(../img/water-lily.jpg) center/cover;
     border-radius: 30px;
     -webkit-box-shadow: 0px 0px 6px 9px rgba(0, 0, 0, 0.35);
@@ -64,13 +66,13 @@ body {
     border: none;
     outline: none;
     background: none;
-    width: 333px;
     text-align: center;
     color: white;
     font-family: 'Courier New', Courier, monospace;
     font-size: 34px;
     font-weight: 600;
     margin-top: 30px;
+    width: 10vw;
 }
 
 .switchlabel {
