--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ body {
 }
 
 .main-cards {
-    width: 85.8vw;
+    width: 160vh;
     height: 76.4vh;
     display: flex;
     flex-direction: column;
@@ -35,12 +35,12 @@ body {
 }
 
 .cards {
-    float: left;
-    width: calc(85.8vw - 100px);
+    width: calc(160vh - 100px);
     height: calc(76.4vh - 100px);
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 50px;
+    gap: 3vw;
+    box-sizing: border-box;
 }
 
 .card {
@@ -59,20 +59,6 @@ body {
 
 .third {
     background: url(../img/111.webp) center/cover;
-}
-
-.input-txt,
-.input-txt::placeholder {
-    border: none;
-    outline: none;
-    background: none;
-    text-align: center;
-    color: white;
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 34px;
-    font-weight: 600;
-    margin-top: 30px;
-    width: 10vw;
 }
 
 .switchlabel {
